examples/test/testpolicy15706.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy15706
  namespace: namespace271
spec:
  podSelector:
    matchLabels:
      key36: value13
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key28: value18
          key2: value21
          key44: value39
      podSelector:
        matchLabels:
          key17: value5
